[project]
name = "lunar-image-processing"
version = "0.1.0"
description = "Lunar Shadow Enhancement on Chandrayaan-2 OHRC Data using Zero-DCE Deep Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pds4-tools>=1.4",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.scripts]
lunar-enhance = "lunar_shadow_enhancement.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lunar_shadow_enhancement"]

[tool.uv]
package = true
